--- a/style/index.css
+++ b/style/index.css
@@ -9,38 +9,44 @@
 :root {
     --cor-header: rgb(14, 14, 14);
     --cor-fonte-header: rgb(206, 205, 205);
-    --cor-sombra-produtos-div: rgba(0, 0, 0, 0.459);
+    --cor-sombra-produtos-div: rgba(0, 0, 0, 0.863);
     --cor-contorno-div-produto: gray;
+    --cor-menu-lateral: rgba(14, 14, 14, 0.966);;
 }
 
 body {
     width: 100vw;
     height: 100vh;
     position: relative;
+    overflow-x: scroll;
+    background-image: url('https://e0.pxfuel.com/wallpapers/686/151/desktop-wallpaper-playstation-papel-de-parede-lol-papel-de-parede-games-papel-de-parede-android-in-2022-retro-games-video-game-room-decor-cool-for-phones-cool-playstation.jpg');
+    background-position: center center;
+    background-size: cover;
 }
 
 /* header */
 
 header {
-    position: absolute;
+    position: fixed;
     width: 100vw;
-    max-height: 60px;
-    min-height: 60px;
+    max-height: 100px;
+    min-height: 100px;
     padding: 0px 20px;
     background-color: var(--cor-header);
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: var(--cor-fonte-header);
+    font-size: 30px;
 }
 
 div.menu {
-    font-size: 40px;
+    font-size: 80px;
     align-items: center;
 }
 
 div#menu-abrir {
-    font-size: 40px;
+    font-size: 80px;
     align-items: center;
 }
 
@@ -51,12 +57,12 @@ div#menu-fechar {
 }
 
 div#login-conta {
-    height: 40px;
+    height: 80px;
 }
 
 div.icon img {
-    height: 40px;
-    width: 40px;
+    height: 80px;
+    width: 80px;
     filter: invert(0.9);
 }
 
@@ -65,19 +71,29 @@ div.icon:hover {
 }
 
 /* MENU LATERAL */
-section#menu-lateral {
-    width: 150px;
-    height: 100vh;
+
+div#menu-fechar {
     background-color: var(--cor-header);
-    position: absolute;
+}
+
+section#menu-lateral {
+    width: 30vw;
+    height: 100vh;
+    background-color: var(--cor-menu-lateral);
+    position: fixed;
     border: 1px solid var(--cor-fonte-header);
     color: var(--cor-fonte-header);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 section#menu-lateral div.texto {
-    padding-top: 10px;
+    padding-top: 7px;
+    padding-bottom: 8px;
+    padding-left: 10px;
 }
 
 div.texto:hover {
@@ -91,15 +107,35 @@ div.texto:hover {
 }
 
 .fechar-menu {
-    left: -150px;
+    left: -30vw;
     transition: 1s;
+}
+
+#redes-sociais {
+    height: 60px;
+    align-items: center;
+}
+
+#redes-sociais a {
+    max-width: 40px;
+    padding-left: 20px;
+}
+
+img#instagram {
+    max-height: 40px;
+    max-width: 40px;
+    filter: invert(0.9);
+}
+
+img#instagram:hover {
+    cursor: pointer;
 }
 
 /* main */
 
 main {
     padding: 20px;
-    padding-top: 80px;
+    padding-top: 140px;
 }
 
 section.produtos-lista {
@@ -109,7 +145,7 @@ section.produtos-lista {
 
 .produtos-borda-externa {
     width: 43vw;
-    height: 200px;
+    height: 300px;
     align-items: center;
 }
 
@@ -143,7 +179,7 @@ div.produtos > div.imagem-produto {
 div.descricao-produto {
     width: 100%;
     height: 30%;
-    background-color: lightgray;
+    background-color: var(--cor-header);
     border-radius: 0px 0px 15px 15px;
 }
 
@@ -151,18 +187,19 @@ button.comprar {
     width: 80%;
     height: 50%;
     border-radius: 10px;
-    background-color: rgb(70, 126, 179);
+    background-color: rgb(0, 52, 119);
     color: white;
     font-weight: bold;
-    margin-top: 10px;
-    margin-left: 13px;
+    margin-top: 20px;
+    margin-left: 26px;
 }
 
 button.comprar:hover {
     width: 85%;
     height: 53%;
-    background-color: rgb(40, 111, 177);
+    background-color: rgb(2, 100, 228);
     font-size: 15px;
+    margin-left: 20px;
 }
 
 .item0 {
