--- a/style/index.css
+++ b/style/index.css
@@ -145,7 +145,7 @@ section.produtos-lista {
 
 .produtos-borda-externa {
     width: 43vw;
-    height: 300px;
+    height: 20vh;
     align-items: center;
 }
 
